tests/fixtures/invalid/pow_bool_set_bytes.py
# Cannot call pow() with Bool, Set[int], Bytes
x = pow(True, {1, 2, 3}, b"hello")
